Fix header spacing

--- a/style.css
+++ b/style.css
@@ -404,9 +404,11 @@ li:before{
 .v-counter .count{
     color: white;
     position:absolute;
+    text-align: center;
     left: 1.2rem;
     top: 1.2rem;
-    padding: 1rem 2.07rem;
+    padding: 1rem 1rem;
+    width: 309px;
     line-height: 1;
     background-color: #0051D3;
 }
